[tool.poetry]
name = "repl-nix-chyn313"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_chyn313"}]

[tool.poetry.dependencies]
python = "^3.10"
git-python = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
